# RAT_Rust

./: CODE_OF_CONDUCT.md  LICENSE  README.md
agent/: Cargo.toml
agent/src/: error.rs  main.rs  run.rs
client/: Cargo.toml
client/src/: main.rs
rat/: Dockerfile  README.md
rat/agent/: Cargo.toml
rat/common/: Cargo.toml
rat/server/: Cargo.toml
shellcode/executor/: Cargo.toml
shellcode/hello_world/: Cargo.toml
