[package]
name = "agent"
version = "0.1.0"
authors = ["Saladino Belisario <SaladinoBelisario@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }
rand = "0.7"
single-instance = "0.3"
zip = "0.5"
